[gd_scene load_steps=5 format=3 uid="uid://c8ak7pdbsda0h"]

[ext_resource type="Theme" uid="uid://c5v71qral7qcg" path="res://Assets/styles/MAQ.tres" id="1_4v55j"]
[ext_resource type="Script" path="res://UI/world_menu.gd" id="1_ics12"]
[ext_resource type="Theme" uid="uid://brndtowgbvndd" path="res://Assets/theme/buttonCourse.tres" id="2_px6v1"]
[ext_resource type="AudioStream" uid="uid://5nfpagt14m6s" path="res://Assets/soundEffect/click.mp3" id="4_vk7u0"]

[node name="worldMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ics12")

[node name="ColorRect" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -135.5
offset_right = 226.0
offset_bottom = 135.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4v55j")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -43.0
offset_right = 112.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_px6v1")
text = "Select Course"

[node name="Button2" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_px6v1")
text = "Main Menu"

[node name="Button3" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_px6v1")
text = "Close"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vk7u0")

[connection signal="pressed" from="ColorRect/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
